# cudaCPPInheritance

./: .gitignore  CMakeLists.txt  CPUPrinter.cpp  CPUPrinter.hpp  CUDAMacros.hpp  GPUPrinter.cu  GPUPrinter.cuh  ISimplePrinter.hpp  LICENSE  README.md  main.cpp
